# finmath

./: .gitignore  CMakeLists.txt  README.md  pyvenv.cfg
.cache/clangd/index/: black_scholes.cpp.1B2781EEB5150171.idx  black_scholes.h.907DFD28383E479E.idx  compound_interest.cpp.2083AC75DC58F865.idx  compound_interest.h.95C3830105B59660.idx  finmath.cpp.2DB9202068503B26.idx  finmath.h.FC1A3B0DD976DCE5.idx  helper.cpp.FB80368879010397.idx  helper.h.DCF306DF1CF32B62.idx  test_finmath.cpp.780F3A1DEB14ED87.idx
benchmark/: README.md  bench_helper.py  benchmark.py  functions.py  requirements.txt
benchmark/results/: sample_bench.json
include/finmath/: binomial_tree.h  black_scholes.h  finmath.h  helper.h
include/finmath/Helper/: helper.h
include/finmath/Interest and Annuities/: compound_interest.h
include/finmath/InterestAndAnnuities/: simple_interest.h
include/finmath/Option Pricing/: options_pricing.h
include/finmath/OptionPricing/: binomial_tree.h  black_scholes.h  options_pricing.h  options_pricing_types.h
include/finmath/PCA/: pca.h
include/finmath/Regression/: OLS.h
include/finmath/TimeSeries/: autocorrelation.h  ema.h  rolling_volatility.h  rsi.h  simple_moving_average.h
src/: python_bindings.cpp
src/cpp/: binomial_tree.cpp  black_scholes.cpp  compound_interest.cpp  finmath.cpp  helper.cpp
src/cpp/Helper/: helper.cpp
src/cpp/Interest and Annuities/: compound_interest.cpp  simple_interest.cpp
src/cpp/InterestAndAnnuities/: compound_interest.cpp  docs.md  simple_interest.cpp
src/cpp/Option Pricing/: binomial_tree.cpp  black_scholes.cpp
src/cpp/OptionPricing/: binomial_tree.cpp  black_scholes.cpp
src/cpp/PCA/: PCA.cpp
src/cpp/Regression/: OLS.cpp
src/cpp/TimeSeries/: autocorrelation.cpp  docs.md  ema.cpp  rolling_volatility.cpp  rsi.cpp  simple_moving_average.cpp
test/: test_finmath.cpp
test/Regression/: OLS_tests.cpp
